# Crazy_PencilZ_AI

./: 01_first_llm_call.py  02_blood_work.py  03_rag_pipeline.py  04_agent.py  05_agent_memory.py  app.py  chatbot.html  index.html  pyproject.toml  requirements.txt
chroma_store/: chroma.sqlite3
uploaded_images/: 1780747666_1779896383427.jfif
